# scuffed-chess

./: CMakeLists.txt  README.md  drawboard.cc  drawboard.h  main.cc  pawn.cc  pawn.h  randomizer.cc  randomizer.h
include/: draw_board.hpp  drawboard.hpp  figure.hpp  figure_coordinates.hpp  figure_functions.hpp  include_list.hpp  king.hpp  knight.hpp  pawn.hpp  randomizer.hpp  rook.hpp  text_functions.hpp  valid_move.hpp  validmove.hpp
source_files/: main.cc
src/: draw_board.cpp  drawboard.cpp  figure.h  figure_functions.cpp  main.cc  main.cpp  randomizer.cpp  text_functions.cpp  valid_move.cpp  validmove.cc  validmove.cpp  validmove.h
